--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -109,6 +109,9 @@
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fa fa-fw fa-chain" aria-hidden="true"></i> Wikipedia</a></li>
       {% endif %}
+      {% if author.cuwebsite %}
+        <li><a href="{{ author.cuwebsite }}">CU Website</a></li>
+      {% endif %}
     </ul>
   </div>
 </div>
